--- a/templates/event_form.html
+++ b/templates/event_form.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
+{% block head %}
+  {{ super() }}
+  <link rel="stylesheet" href="{{ url_for('static', filename='print.css') }}?v=20260131">
+{% endblock %}
 {% block content %}
 <h1 class="mb-4">{{ title }}</h1>
 
@@ -33,6 +37,7 @@
     <div class="col-12">
       <button class="btn btn-primary" type="submit">{{ _('Save') }}</button>
       <a class="btn btn-outline-secondary" href="{{ url_for('events_calendar') }}">{{ _('Go to Calendar') }}</a>
+      <a class="btn btn-secondary mt-2" href="{{ request.referrer or url_for('events_calendar') }}">{{ _('Back') }}</a>
     </div>
   </div>
 </form>
