--- a/templates/login.html
+++ b/templates/login.html
@@ -12,5 +12,6 @@
     <input class="form-control" name="password" type="password" autocomplete="current-password" required>
   </div>
   <button class="btn btn-primary" type="submit">Login</button>
+  <a class="btn btn-secondary mt-2" href="/">{{ _('Back') }}</a>
 </form>
 {% endblock %}
