--- a/templates/players_list.html
+++ b/templates/players_list.html
@@ -2,9 +2,12 @@
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-3">
   <h1 class="mb-0">{{ _('Players') }}</h1>
-  {% if session.get('is_admin') %}
-    <a class="btn btn-primary" href="{{ url_for('create_player') }}">{{ _('+ Add Player') }}</a>
-  {% endif %}
+  <div class="d-flex gap-2">
+    {% if session.get('is_admin') %}
+      <a class="btn btn-primary" href="{{ url_for('create_player') }}">{{ _('+ Add Player') }}</a>
+    {% endif %}
+    <a class="btn btn-secondary ms-2" href="{{ request.referrer or url_for('events_calendar') }}">{{ _('Back') }}</a>
+  </div>
 </div>
 
 <form class="row row-cols-lg-auto g-3 align-items-end mb-4" method="get">
@@ -44,11 +47,11 @@
         <th>{{ _('Belt Color') }}</th>
         <th>{{ _('Discipline') }}</th>
         <th>{{ _('Monthly Fee Type') }}</th>
-        <th>Monthly Due</th>
+        <th>{{ _('Monthly Due') }}</th>
         <th>{{ _('Active') }}</th>
         <th>{{ _('Email') }}</th>
         <th>{{ _('Sportdata') }}</th>
-        <th>Health</th>
+        <th>{{ _('Health') }}</th>
         {% if session.get('is_admin') %}<th style="width: 160px;"></th>{% endif %}
       </tr>
     </thead>
