--- a/templates/receipts_print_batch.html
+++ b/templates/receipts_print_batch.html
@@ -47,9 +47,13 @@
 
     </div>
   {% endfor %}
+
+  <div class="mt-3 no-print d-flex gap-2 justify-content-center">
+    <button class="btn btn-primary" type="button" onclick="window.print()">Print</button>
+    <a class="btn btn-outline-secondary" href="{{ request.referrer or url_for('list_players') }}">Back</a>
+    <button class="btn btn-outline-danger" type="button" onclick="window.close()">Close</button>
+  </div>
 </div>
 
-<script>
-  window.addEventListener('load', () => setTimeout(() => window.print(), 250));
-</script>
+<!-- Print dialog auto-open removed -->
 {% endblock %}
