--- a/templates/player_form.html
+++ b/templates/player_form.html
@@ -33,8 +33,8 @@
 
     <!-- Grade (select only) -->
     <div class="col-md-4">
-      <label class="form-label">{{ _('Grade Level') }}</label>
-      {{ form.grade_level(class="form-select", id="grade_level") }}
+      <label class="form-label">{{ _('Grade') }}</label>
+      {{ form.grade_level(class_="form-select", id="grade_level") }}
       <div class="form-text mt-1">
         <span id="belt_preview" class="belt-chip" style="border:1px solid #ced4da;">&nbsp;</span>
       </div>
