--- a/templates/event_detail.html
+++ b/templates/event_detail.html
@@ -106,7 +106,11 @@
       {% for r in regs %}
         <tr>
           <td>
-            <a href="{{ url_for('player_detail', player_id=r.player.id) }}">{{ r.player.full_name() }}</a>
+            {% if session.get('is_admin') %}
+              <a href="{{ url_for('player_detail', player_id=r.player.id) }}">{{ r.player.full_name() }}</a>
+            {% else %}
+              {{ r.player.full_name() }}
+            {% endif %}
           </td>
           <td>
             {% if r.reg_categories %}
